add c# wrapper for ise tools

--- a/tools/wpf/isetool/isetool.csproj
+++ b/tools/wpf/isetool/isetool.csproj
@@ -50,8 +50,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="IseWrapper">
-      <HintPath>..\..\..\..\library\lib-win\Debug\IseWrapper.dll</HintPath>
+    <Reference Include="IseWrapper, Version=1.0.5261.40468, Culture=neutral, processorArchitecture=x86">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\library\lib-win\Debug\IseWrapper.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
@@ -72,6 +73,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Util\Converter.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
