--- a/tools/wpf/isetool/isetool.csproj
+++ b/tools/wpf/isetool/isetool.csproj
@@ -32,7 +32,7 @@
     </TargetFrameworkProfile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
+    <PlatformTarget>x86</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -54,7 +54,7 @@
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="IseWrapper, Version=1.0.5261.40468, Culture=neutral, processorArchitecture=x86">
+    <Reference Include="IseWrapper, Version=1.0.5274.38030, Culture=neutral, processorArchitecture=x86">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\library\lib-win\Debug\IseWrapper.dll</HintPath>
     </Reference>
