--- a/tools/android/AndroidManifest.xml
+++ b/tools/android/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.cnabro.isetool"
+    package="com.pigtools.isetool"
     android:versionCode="1"
     android:versionName="1.0" >
 	
@@ -16,7 +16,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.cnabro.isetool.MainActivity"
+            android:name="com.cnabro.isetool.activity.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -24,6 +24,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        
+        <service
+            android:name="com.cnabro.isetool.service.IseProcessingService"
+            android:label="@string/app_name" >
+            <intent-filter>
+                <action android:name="com.cnabro.isetool" />
+            </intent-filter>
+        </service>
     </application>
 
 </manifest>
