--- a/tools/android/AndroidManifest.xml
+++ b/tools/android/AndroidManifest.xml
@@ -18,7 +18,7 @@
         android:theme="@style/IseToolActionBarTheme" >
         <activity
             android:name="com.pigtools.isetool.activity.MainActivity"
-            android:label="@string/app_name">
+            android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -26,7 +26,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.pigtools.isetool.activity.ViewerActivity"
+            android:name="com.pigtools.isetool.activity.FileListActivity"
             android:label="@string/app_name" >
         </activity>
 
