isetool-wp / make native wrapper for window phone 8.1

--- a/tools/wp8.1/IseStudio/IseStudio.csproj
+++ b/tools/wp8.1/IseStudio/IseStudio.csproj
@@ -111,9 +111,10 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
-    <Reference Include="IseWrapper">
-      <HintPath>..\..\..\..\library\lib-win\Debug\IseWrapper.dll</HintPath>
-    </Reference>
+    <ProjectReference Include="..\IseWrapperWP\IseWrapperWP.vcxproj">
+      <Project>{5813da5e-af94-4cf5-8dee-f80c6114710c}</Project>
+      <Name>IseWrapperWP</Name>
+    </ProjectReference>
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '12.0' ">
     <VisualStudioVersion>12.0</VisualStudioVersion>
