isetool-wp8.1 / initial task for wp8.1 wrapper

--- a/tools/wp8.1/IseWrapperWP/IseWrapperWP.vcxproj.filters
+++ b/tools/wp8.1/IseWrapperWP/IseWrapperWP.vcxproj.filters
@@ -5,13 +5,26 @@
       <UniqueIdentifier>cd9dfb65-716a-4adc-bac2-94d4376490be</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tga;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="Header Files">
+      <UniqueIdentifier>{e4121464-4f18-44e8-9845-51ca66b61c51}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files">
+      <UniqueIdentifier>{35c8e385-96d8-4f47-b33c-24674dfc394d}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp" />
-    <ClCompile Include="Class1.cpp" />
+    <ClCompile Include="IseWrapperWP.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pch.h" />
-    <ClInclude Include="Class1.h" />
+    <ClInclude Include="IseWrapperWP.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="IseContainerWrapper.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
