isetool-wp81 / modify isewrapperWP for asynctask

--- a/tools/wp8.1/IseWrapperWP/IseWrapperWP.vcxproj
+++ b/tools/wp8.1/IseWrapperWP/IseWrapperWP.vcxproj
@@ -133,6 +133,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Converter.h" />
     <ClInclude Include="IseContainerWrapper.h" />
     <ClInclude Include="IseWrapperWP.h" />
     <ClInclude Include="pch.h" />
