--- a/tools/wp8.1/IseWrapperWP/IseWrapperWP.vcxproj.filters
+++ b/tools/wp8.1/IseWrapperWP/IseWrapperWP.vcxproj.filters
@@ -26,5 +26,8 @@
     <ClInclude Include="IseContainerWrapper.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Converter.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
