--- a/tools/wp8.1/IseStudio/packages.config
+++ b/tools/wp8.1/IseStudio/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="MvvmLight" version="4.2.30.0" targetFramework="wpa81" />
   <package id="MvvmLightLibs" version="4.4.32.1" targetFramework="wpa81" />
+  <package id="WPtoolkit" version="4.2013.08.16" targetFramework="wpa81" />
 </packages>
